manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "tinc-router"
  namespace : "product"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "tinc-router"
  template:
    metadata:
      labels:
        app: "tinc-router"
    spec:
      volumes:
        - name: css-auth-properties
          #secret:
            #secretName: css-auth-properties
      containers:
        - name: "tinc-router"
          image: "cssauth.azurecr.io/aksdevjpeastsandbox/route:v1"
          command: [ "/bin/bash", "-c", "--" ]
          args: [ "while true; do sleep 30; done;" ]
          ports:
          - containerPort: 22
            protocol: UDP
          - containerPort: 655
            protocol: UDP
          - containerPort: 22
            protocol: TCP
          - containerPort: 655
            protocol: TCP
          stdin: true
          securityContext:
            privileged: true
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "/app/route.sh"]
