manifests/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ssh-node
  namespace: product
  annotations:
    #nginx.ingress.kubernetes.io/whitelist-source-range: '198.204.78.0/24,113.33.232.2/32'
    #nginx.ingress.kubernetes.io/whitelist-source-range: '198.204.78.0/24,113.33.232.2/32,178.128.104.229/32,167.99.78.230/32,206.189.50.215/32,3.67.234.155/32,18.159.128.50/32,167.99.246.105/32,138.197.188.142/32,161.35.218.92/32,3.67.234.155/32,206.189.50.60/32,14.3.219.97/32'
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #nginx.ingress.kubernetes.io/app-root: /api/auth/v1
    #nginx.ingress.kubernetes.io/configuration-snippet: |
        #if ($http_x_forwarded_proto = 'https') {
        #  return 301 https://$host$request_uri;
        #}

spec:
  tls:
    - hosts:
        #- camauth-uat.cmp.dev.catalina.tokyo
        - aks-npdevjpeast2-14016995-vmss000000.cmp.dev.catalina.tokyo
      secretName: tls-secret-ssh-node
  rules:
    - host: aks-npdevjpeast2-14016995-vmss000000.cmp.dev.catalina.tokyo
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: tinc-router-service
              servicePort: 22
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              serviceName: tinc-router-service
              servicePort: 22
